{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 23,
  "lineage": "22b4e96b-a6fe-9d03-fcc1-a1903a8fdfa2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b8d527345fdace59",
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:instance/i-064f42dd48df94c9c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064f42dd48df94c9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c6327d2f64c766d0"
              }
            ],
            "primary_network_interface_id": "eni-0c6327d2f64c766d0",
            "private_dns": "ip-10-0-1-138.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.138",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f42936baf7cb5ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9515199eb76ff8c",
            "tags": {
              "name": "tfinstances"
            },
            "tags_all": {
              "name": "tfinstances"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0967d5110acdeb395"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "i-064f42dd48df94c9c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_subnet.publicip1",
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Tfinternetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:internet-gateway/igw-08c6ca67f17513627",
            "id": "igw-08c6ca67f17513627",
            "owner_id": "201727487182",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "tfvpcinternetgateway"
            },
            "tags_all": {
              "Name": "tfvpcinternetgateway"
            },
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfvpcroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:route-table/rtb-0342ddf74112f269e",
            "id": "rtb-0342ddf74112f269e",
            "owner_id": "201727487182",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c6ca67f17513627",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "rtb-0342ddf74112f269e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.Tfinternetgateway",
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfroutetableassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a180e5d66937b9f7",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0342ddf74112f269e",
            "subnet_id": "subnet-0d9515199eb76ff8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Tfinternetgateway",
            "aws_route_table.tfvpcroutetable",
            "aws_subnet.publicip1",
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:security-group/sg-074637e82aaf0bdd0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-074637e82aaf0bdd0",
            "ingress": [],
            "name": "terraform-20251218131644820000000002",
            "name_prefix": "terraform-",
            "owner_id": "201727487182",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfsg"
            },
            "tags_all": {
              "Name": "tfsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "sg-074637e82aaf0bdd0",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:subnet/subnet-0f289b4ece3127ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f289b4ece3127ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201727487182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "subnet-0f289b4ece3127ad1",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:subnet/subnet-00cd00c5f3862817e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd00c5f3862817e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201727487182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "subnet-00cd00c5f3862817e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:subnet/subnet-0d9515199eb76ff8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9515199eb76ff8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201727487182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "subnet-0d9515199eb76ff8c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:subnet/subnet-0deee14e9f7f9b8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deee14e9f7f9b8eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201727487182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-02b4e044bd5a4bc47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "subnet-0deee14e9f7f9b8eb",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.Tfpipelinevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Tfpipelinevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:201727487182:vpc/vpc-02b4e044bd5a4bc47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094f22950092b86f2",
            "default_route_table_id": "rtb-0690460447eac1d9f",
            "default_security_group_id": "sg-0967d5110acdeb395",
            "dhcp_options_id": "dopt-06294cd9f39455f5a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b4e044bd5a4bc47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0690460447eac1d9f",
            "owner_id": "201727487182",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "tfvpc"
            },
            "tags_all": {
              "Name": "tfvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "201727487182",
            "id": "vpc-02b4e044bd5a4bc47",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}